Create basic book log layout

--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
             <div class="data"></div>
         </form>
     </div>
-    <div class="book-log">Book Tracking</div>
+    <div class="book-log">
+        <div>Books Read: 0</div>
+        <div>Books Unread: 0</div>
+        <div>Book Total: 0</div>
+        <div>
+            <button>Delete All</button>
+        </div>
+    </div>
     <div class="library-list">Book List</div>
 </body>
 </html>
