Include code to add information for newly created book objects to the table

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <button>Delete All</button>
         </div>
     </div>
-    <div class="library-list">
-        <table style="width: 100%">
+    <div id="library-list">
+        <table style="width: 100%" id="list">
             <tr>
                 <th>Title</th>
                 <th>Author</th>
