Add function to delete entire library upon clicking Delete All button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div>Books Unread: 0</div>
         <div>Book Total: 0</div>
         <div>
-            <button>Delete All</button>
+            <button onclick=deleteLibrary()>Delete All</button>
         </div>
     </div>
     <div id="library-list">
