Add code to track number of read, unread, and total books

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </form>
     </div>
     <div class="book-log">
-        <div>Books Read: 0</div>
-        <div>Books Unread: 0</div>
-        <div>Book Total: 0</div>
+        <div id="booksRead">Books Read: 0</div>
+        <div id="booksUnread">Books Unread: 0</div>
+        <div id="booksTotal">Book Total: 0</div>
         <div>
             <button onclick=deleteLibrary()>Delete All</button>
         </div>
