Add colors for buttons and enable toggling of classes upon status change

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
         <div id="booksUnread">Books Unread: 0</div>
         <div id="booksTotal">Book Total: 0</div>
         <div>
-            <button onclick=deleteLibrary()>Delete All</button>
+            <button class='Unread' onclick=deleteLibrary()>Delete All</button>
         </div>
     </div>
     <div id="library-list">
         <table style="width: 100%" id="list">
             <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Pages</th>
-                <th>Status</th>
-                <th>Delete</th>
+                <th class="cell1">Title</th>
+                <th class="cell2">Author</th>
+                <th class="cell3">Pages</th>
+                <th class="cell4">Status</th>
+                <th class="cell5">Delete</th>
             </tr>
         </table>
     </div>
