--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <form onSubmit="event.preventDefault() & addBookToLibrary()">
             <div class="data">
                 <label for="title">Title: </label>
-                <input type="text" id="title" name="title" required>                
+                <input type="text" id="title" name="title" required pattern="[a-zA-Z0-9]+">                
             </div>
             <div class="data">
                 <label for="author">Author: </label>
-                <input type="text" id="author" name="author" required>
+                <input type="text" id="author" name="author" required pattern="[A-Za-z]+">
             </div>
             <div class="data">
                 <label for="pages">Pages: </label>
-                <input type="number" id="pages" name="pages" min="1" required>
+                <input type="number" id="pages" name="pages" min="1" required pattern="[0-9]+">
             </div>
             <div class="data">
                 <label for="readStatus">Status: </label>
